clusters/cl01tl/manifests/pgadmin/Deployment-pgadmin.yaml
---
# Source: pgadmin4/charts/pgadmin4/templates/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: pgadmin
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: pgadmin
    helm.sh/chart: pgadmin4-4.4.0
  namespace: pgadmin
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/name: pgadmin
      app.kubernetes.io/instance: pgadmin
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: pgadmin
        app.kubernetes.io/name: pgadmin
    spec:
      enableServiceLinks: false
      serviceAccountName: default
      automountServiceAccountToken: true
      hostIPC: false
      hostNetwork: false
      hostPID: false
      dnsPolicy: ClusterFirst
      containers:
        - env:
            - name: PGADMIN_CONFIG_ENHANCED_COOKIE_PROTECTION
              value: "False"
            - name: PGADMIN_DEFAULT_EMAIL
              value: alexanderlebens@gmail.com
            - name: PGADMIN_DEFAULT_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: pgadmin-password
                  name: pgadmin-password-secret
          image: dpage/pgadmin4:9.10
          imagePullPolicy: IfNotPresent
          name: main
          resources:
            requests:
              cpu: 10m
              memory: 256Mi
          securityContext:
            runAsGroup: 5050
            runAsUser: 5050
          volumeMounts:
            - mountPath: /var/lib/pgadmin
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pgadmin4-data
