clusters/cl01tl/manifests/pgadmin/Service-pgadmin.yaml
---
# Source: pgadmin4/charts/pgadmin4/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  labels:
    app.kubernetes.io/instance: pgadmin
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: pgadmin
    app.kubernetes.io/service: pgadmin
    helm.sh/chart: pgadmin4-4.4.0
  namespace: pgadmin
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: pgadmin
    app.kubernetes.io/name: pgadmin
