clusters/cl01tl/manifests/pgadmin/HTTPRoute-http-route-pgadmin.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-pgadmin
  namespace: pgadmin
  labels:
    app.kubernetes.io/name: http-route-pgadmin
    app.kubernetes.io/instance: pgadmin
    app.kubernetes.io/part-of: pgadmin
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - pgadmin.alexlebens.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: pgadmin
          port: 80
          weight: 100
